--- a/client/index.html
+++ b/client/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./public/assets/icons/data-explorer.svg"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Explorador de Datos Universidad de Boyaca</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" /> <!-- ! Agregar Icono Personalizado -->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Explorador de Datos Universidad de Boyaca</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
