Modifica el icono principal del sitio web

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./public/assets/icons/data-explorer.svg"
+      href="/assets/icons/data-explorer.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explorador de Datos Universidad de Boyaca</title>
