--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,16 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/assets/icons/data-explorer.svg" />
+
+  <!-- Importacion de boostrap 3.3 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <!--  Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/favicon.svg" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Explorador de Datos - Universidad de Boyaca</title>
+  <title>Explorador de Datos</title>
 </head>
 
 <body>
